[project]
name = "mcpo"
version = "0.0.14"
description = "A simple, secure MCP-to-OpenAPI proxy server"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "mcp>=1.8.0",
    "mcp[cli]>=1.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
mcpo = "mcpo:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/mcpo/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
